--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <head>
   <title>INSTAGRAM FEED</title>
-  <link rel:"stylesheet" type:"text/css" >
+  <link rel:"stylesheet" type:"text/css" href:"syles.css">
 </head>
 
 
